SGDB-2504: float icon alignment fixed

--- a/components/31-molecules/video/_video.scss
+++ b/components/31-molecules/video/_video.scss
@@ -18,17 +18,9 @@
   a {
     margin-top: .4rem;
     margin-bottom: .4rem;
-    float: right;
   }
 }
 
 .audio-description {
-  .standalone-link:not(.no-icon) {
-    &::after {
-      top: 0;
-      bottom: 0;
-      margin-top: auto;
-      margin-bottom: auto;
-    }
-  }
+  text-align: right;
 }
